# SnifferBee

./: README.md  build.sh  clean.sh  dependencies.sh  install.sh  uninstall.sh
fc/: README.md  build_fc_microbee.sh  build_fc_superbee.sh
fc/microbee/: Makefile
fc/microbee/src/main/: main.c  mw.c
fc/superbee/: Makefile
fc/superbee/src/main/: tags
gs/: README
gs/GSRAO/: CMakeLists.txt
gs/GSRAO/scripts/: 46-gsrao.rules  disp_anemometer_rose.py  disp_compare_anemo_wind.py  disp_debug.py  disp_motors_bat.py  disp_raw.py  disp_ref_pos_3d.py  disp_wind.py  disp_wind_est.py  disp_wind_rose.py  disturb_rose.py  identify.py  leso.py  leso_test.py  pearson.py
gs/GSRAO/src/: GSRAO_Config.cxx  GSRAO_Config.h  GSRAO_cuda_init.cu  GSRAO_thread_comm.cxx  GSRAO_thread_comm.h  main.cxx
gs/GSRAO/src/common/: vector_rotation.h
gs/GSRAO/src/io/: net_receive_bear_data.cxx  net_receive_bear_data.h  net_send_bear_cmd.cxx  net_send_bear_cmd.h  piobear_data_parser.cxx  piobear_data_parser.h  record.cxx  record.h  serial.cxx  serial.h  serial_anemometer.cxx  serial_mbsp.cxx  serial_spp.cxx  serial_young.cxx  udp_ocdev.cxx  udp_ocdev.h  udp_pioneer.cxx  udp_pioneer.h
gs/GSRAO/src/method/: back_forth_measure.cxx  circle_measure.cxx  circle_measure.h  flying_compass.cxx  flying_compass.h  hover_measure.cxx  method.cxx  method.h  odor_compass.cxx  odor_compass.h  plume_finding.cxx  plume_finding.h
gs/GSRAO/src/method/foc/: flying_odor_compass.cxx  flying_odor_compass.h  foc_estimate.cxx  foc_estimate.h  foc_feature.cxx  foc_feature.h  foc_interp.cxx  foc_interp.h  foc_wavelet.cu  virtual_plume.h  virtual_plume_gpu.cu  wake_qr.cxx
gs/GSRAO/src/mocap/: PacketClient_Unix.cpp  mocap_noise_reduction.cxx  mocap_noise_reduction.h  packet_client.cxx  packet_client.h  signal_model_ukf.hpp
gs/GSRAO/src/robot/: microbee.cxx  microbee.h  pioneer.cxx  pioneer.h  robot.cxx  robot.h  robot_control.cxx  robot_control.h
gs/GSRAO/src/scene/: scene.cxx  scene.h
gs/GSRAO/src/ui/: UI.cxx  UI.h  View.cxx  View.h
gs/GSRAO/src/ui/draw/: DrawScene.cxx  draw_arena.cxx  draw_arena.h  draw_arrow.cxx  draw_arrow.h  draw_qr.cxx  draw_ref_pos.cxx  draw_ref_pos.h  draw_robots.cxx  draw_wave.cxx  draw_wave.h  draw_wind.cxx  draw_wind.h
gs/GSRAO/src/ui/widgets/Fl_LED_Button/: Fl_LED_Button.cxx
gs/PPM_encoder/: CMakeLists.txt  readme.txt
gs/PPM_encoder/script/: gdbinit
gs/PPM_encoder/src/: config.h  main.c  mxconstants.h  ppm.c  ppm.h  serial.c  serial.h  stm32f1xx_hal_conf.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h
gs/miscellaneous/flying_compass/: CMakeLists.txt  delta_t.py  derivative.py  find_diff.py  noise_recognize.py  noise_suppress_kf.py  noise_suppress_kf_rts.py  noise_suppress_ukf.py  sensor.py  test.py
gs/miscellaneous/flying_compass/paper/: Record_2017-01-20_11-52-54.h5  Record_2017-01-20_12-34-37.h5  Record_2017-01-20_16-44-05.h5  Record_2017-01-20_17-06-56.h5  disp_anemometer_rose.py  disp_feature_maxline.py  disp_maxline_scale.py  disp_maxline_value.py  disp_raw.py  disp_wind_rose.py  disp_wt.py
gs/miscellaneous/flying_compass/scripts/: disp_alt.py  disp_attitude.py  disp_cps.py  disp_delta.py  disp_denoise.py  disp_diff.py  disp_direction.py  disp_edge.py  disp_feature_hd_rose.py  disp_feature_maxline.py  disp_maxline.py  disp_modmax.py  disp_modmax_maxline.py  disp_pos_att.py  disp_raw.py  disp_raw_image.py  disp_rose.py  disp_smooth.py  disp_std.py  disp_ukf.py  disp_wind.py  disp_wind_est.py  disp_wind_rose.py  disp_wind_vs_direction.py  disp_wt.py  disp_wvs.py  display.py  edge_cluster.py  s1_diff.py  s2_find_delta.py
gs/miscellaneous/flying_compass/src/: main.cxx  record.cxx  record.h
gs/miscellaneous/flying_compass/src/foc/: flying_odor_compass.cpp  flying_odor_compass.cxx  flying_odor_compass.h  foc_delta.cxx  foc_delta.h  foc_diff.cxx  foc_diff.h  foc_estimate.cxx  foc_estimate.h  foc_interp.cxx  foc_interpolation.cxx  foc_interpolation.h  foc_noise_reduction.h  foc_smooth.cxx  foc_wind.cxx  foc_wind.h  foc_wind_estimate.cxx  foc_wind_estimate.h  mox_model_ukf.hpp  noise_suppression.cxx  noise_suppression.h  noise_suppression.hpp
gs/miscellaneous/flying_compass/src/foc/utils/: adj_mox.py
gs/miscellaneous/flying_compass/test/: processed_data.h5  sensor_reading.h5  smoothed_sensor_reading.h5
gs/miscellaneous/odor_compass/: CMakeLists.txt
gs/miscellaneous/odor_compass/scripts/: disp_alt.py  disp_cps.py  disp_diff.py  disp_direction.py  disp_feature.py  disp_gradient.py  disp_interp.py  disp_modmax.py  disp_raw.py  disp_rose.py  disp_tdoa.py  disp_wind.py  (+6 more)
gs/miscellaneous/pidtune/: comm_thread.py  pidtune.py
gs/miscellaneous/voltmeter/: voltmeter.ino  voltmeter_i2c_slave.ino  voltmeter_msp.ino
modules/daq_spi/: daq_spi.ino
player/: CMakeLists.txt
player/scripts/: FOC_Record.h5  disp_attitude.py  disp_diff.py  disp_interp.py  disp_wind.py  disp_wind_est.py
player/src/: Config.cxx  Config.h  Player_Config.cxx  Player_Config.h  main.cxx
player/src/foc/: 2  flying_odor_compass.cxx  flying_odor_compass.h  foc_delta.cxx  foc_delta.h  foc_diff.cxx  foc_diff.h  foc_edge.cxx  foc_edge.h  foc_estimate.cxx  foc_estimate.h  foc_feature.cxx  foc_feature.h  foc_gradient.cxx  foc_gradient.h  foc_interp.cxx  foc_interp.h  foc_noise_reduction.cxx  foc_smooth.cxx  foc_smooth.h  foc_std.cxx  foc_std.h  foc_tdoa.cxx  foc_tdoa.h  foc_wavelet.cu  foc_wavelet.h  foc_wind.cxx  foc_wt.cxx  foc_wt.h  tags  vector_rotation.cxx  virtual_plume.cu  virtual_plume.cxx  virtual_plume.h  virtual_plume_cpu.cxx  virtual_plume_gpu.cu  wake_qr.cxx  wake_qr.h
player/src/io/: play_thread.cxx  play_thread.h  record.cxx
player/src/method/: back_forth_measure.h  hover_measure.h  method.h
player/src/robot/: robot.cxx  robot.h
player/src/ui/: UI.cxx  View.cxx
player/src/ui/draw/: DrawScene.cxx  draw_arena.cxx  draw_arrow.cxx  draw_arrow.h  draw_foc.cxx  draw_foc.h  draw_qr.cxx  draw_qr.h  draw_robots.cxx  draw_robots.h  draw_wave.cxx
player/src/ui/icons/: icons.h
player/src/ui/widgets/Fl_LED_Button/: Fl_LED_Button.H
player/src/ui/widgets/Fl_Rotated_Text/: Fl_Rotated_Text.H
(+35 files in other folders)
